# Labs_In_General_Physics

./: .gitmodules  LICENSE  README.md
2.1.2/: main.tex
2.1.6/: main.tex
2.5.1/: main.tex
LabaCL/: .gitignore  Makefile  Test.lab
LabaCL/include/: Differentiator.h  LabaCL.h  Stack.h
LabaCL/src/: Data_Analysis.c  Differentiator.c  Error_Compiler.c  Expression_Tree.c  Gauss_Method.c  Graph_Compiler.c  Graphic_Dump.c  Print_Graph.c  Stack.c  User_Interface.c  main.c
Laba_Helper/: .gitignore  CMakeLists.txt  README.md
Laba_Helper/examples/: example_1.lab
Laba_Helper/include/: Data_Analysis.h  Graph.h  Tools.h
Laba_Helper/src/: Data_Analysis.c  Graph_Compiler.c  Print_Graph.c  Tools.c  User_Interface.c  main.c
Labs_Helper/: .gitignore  Data_Analysis.c  Graph.py  Labs.h  Makefile  Print_Graph.c  Test.py  Test.txt  main.c
Labs_Helper/include/: Differentiator.h  Insert_Functions.h  Labs.h
Labs_Helper/src/: Data_Analysis.c  Description_Interpreter.c  Differentiator.c  Gauss_Method.c  Lexer.c  Parser.c  Print_Graph.c  main.c
Semester_2/: README.md
Semester_2/1.3.3/: main.tex
Semester_2/2.1.2/: main.tex
Semester_2/2.1.6/: main.tex
Semester_2/2.2.1/: README.md  main.tex
Semester_2/2.2.3/: main.tex
Semester_2/2.3.1 (incomplete)/: main.tex
Semester_2/2.4.1/: main.tex
Semester_2/2.5.1/: main.tex
Semester_3/: README.md
Semester_3/3.2.5/: main.tex
Semester_3/3.2.8/: main.tex
Semester_3/3.3.3/: main.tex
Semester_3/3.3.5/: main.tex
Semester_3/3.4.1/: main.tex
Semester_3/3.4.4/: main.tex
Semester_3/3.6.1/: main.tex
Semester_3/3.7.1/: main.tex
Semester_5/5.5.1/report/: data.py
Semester_5/5.5.1/report/src/: labs_preamble.sty  main.tex  (+1 more)
